<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Explorer</string>
    <string name="okay">Okay</string>
    <string name="sensor_label">Sensor</string>
    <string name="sensor_calibrated_name">Gyroscope</string>
    <string name="sensor_active">Active</string>
    <string name="sensor_unavailable">Unavailable</string>
    <string name="action_config">Settings</string>
    <string name="action_reset">Reset</string>
    <string name="label_x_axis">X-Axis:</string>
    <string name="label_y_axis">Y-Axis:</string>
    <string name="label_z_axis">Z-Axis:</string>
    <string name="value_default">0.0</string>
    <string name="value_default_mean_filter">0.5</string>
    <string name="value_default_complimentary_filter">0.5</string>
    <string name="developer_url">KircherElectronics.com</string>
    <string name="confirm_label">I got this.</string>
    <string name="action_options">Options</string>
    <string name="action_help">Help</string>
    <string name="action_start_log">Start</string>
    <string name="action_stop_log">Stop</string>
    <string name="str_lat">lat</string>
    <string name="str_lon">lon</string>
    <string name="str_ele">ele</string>
    <string name="str_time">time</string>
    <string name="action_log_start">start</string>
    <string name="action_log_stop">stop</string>
    <string name="zero">清零</string>

</resources>