<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/str_lon" />

        <TextView
            android:id="@+id/lat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/str_lat" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layout_calibrated_header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_weight="0.5" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true" >

            <TextView
                android:id="@+id/label_calibrated_filter_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sensor_calibrated_name"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/light_green"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/label_calibrated_filter_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/label_calibrated_filter_name"
                android:text="@string/sensor_label"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_calibrated_statistics"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.75" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" >

            <TableLayout
                android:id="@+id/table_calibrated_statistics_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TableRow
                    android:id="@+id/table_calibrated_statistics_left_row_0"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dip" >

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1" >

                        <TextView
                            android:id="@+id/label_x_axis_calibrated"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:text="@string/label_x_axis"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/value_x_axis_calibrated"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/label_x_axis_calibrated"
                            android:text="@string/value_default"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" >

                        <TextView
                            android:id="@+id/label_y_axis_calibrated"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:text="@string/label_y_axis"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/value_y_axis_calibrated"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/label_y_axis_calibrated"
                            android:text="@string/value_default"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="1" >

                        <TextView
                            android:id="@+id/label_z_axis_calibrated"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:text="@string/label_z_axis"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/value_z_axis_calibrated"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_toRightOf="@+id/label_z_axis_calibrated"
                            android:text="@string/value_default"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                    </RelativeLayout>
                </TableRow>
            </TableLayout>
        </RelativeLayout>
    </RelativeLayout>

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/light_green"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@color/white" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="start_s" />


        <Button
            android:id="@+id/gps_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_start_log" />


        <Button
            android:id="@+id/gps_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_log_stop" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/clr_v"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="clrV" />

        <Button
            android:id="@+id/button_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="clrAll" />

        <Button
            android:id="@+id/match"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="match"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/linx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="LineX"/>

        <TextView
            android:id="@+id/liny"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="LineY"/>

        <TextView
            android:id="@+id/VX"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="VX"/>

        <TextView
            android:id="@+id/VY"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="VY"/>

        <TextView
            android:id="@+id/AX"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="AX"/>

        <TextView
            android:id="@+id/AY"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="AY"/>

    </LinearLayout>


</LinearLayout>